--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<script src="./index.js" type="module"></script>
-		<script src="./index-2.js" type="module"></script>
+		<script src="./index-syntaxys.js" type="module"></script>
+		<script src="./index-2-masyv.js" type="module"></script>
 	</body>
 </html>
