add module 2 (function - theory) v4

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<body>
 		<script src="./index-syntaxys.js" type="module"></script>
 		<script src="./index-2-masyv.js" type="module"></script>
+		<script src="./index-3-function.js" type="module"></script>
 	</body>
 </html>
