--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
 		<title>Document</title>
 	</head>
 	<body>
+		<ul id="menu1" class="menu1">
+			<li class="menu-item1">1</li>
+			<li class="menu-item1">2</li>
+			<li class="menu-item1">3</li>
+			<li>blog</li>
+		</ul>
+		<ul id="menu" class="menu">
+			<li class="menu-item">home</li>
+			<li class="menu-item">about</li>
+			<li class="menu-item">gallery</li>
+			<li>blog</li>
+		</ul>
 		<script src="./index-syntaxys.js" type="module"></script>
 		<script src="./index-2-masyv.js" type="module"></script>
 		<script src="./index-3-function.js" type="module"></script>
+		<script src="./index-4-dom.js" type="module"></script>
 	</body>
 </html>
