--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<ul id="menu1" class="menu1">
+		<!-- <ul id="menu1" class="menu1">
 			<li class="menu-item1">1</li>
 			<li class="menu-item1">2</li>
 			<li class="menu-item1">3</li>
@@ -18,10 +18,12 @@
 			<li class="menu-item">about</li>
 			<li class="menu-item">gallery</li>
 			<li>blog</li>
-		</ul>
+		</ul> -->
 		<script src="./index-syntaxys.js" type="module"></script>
 		<script src="./index-2-masyv.js" type="module"></script>
 		<script src="./index-3-function.js" type="module"></script>
 		<script src="./index-4-dom.js" type="module"></script>
+		<script src="./index-5-test.js" type="module"></script>
+
 	</body>
 </html>
