add test hw6 1-3

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 		<script src="./index-3-function.js" type="module"></script>
 		<script src="./index-4-dom.js" type="module"></script>
 		<script src="./index-5-test.js" type="module"></script>
-
+		<script src="./index-6-hw6.js" type="module"></script>
 	</body>
 </html>
