--- a/index.html
+++ b/index.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-	</head>
-	<body>
-		<!-- <ul id="menu1" class="menu1">
-			<li class="menu-item1">1</li>
-			<li class="menu-item1">2</li>
-			<li class="menu-item1">3</li>
-			<li>blog</li>
-		</ul>
-		<ul id="menu" class="menu">
-			<li class="menu-item">home</li>
-			<li class="menu-item">about</li>
-			<li class="menu-item">gallery</li>
-			<li>blog</li>
-		</ul> -->
-		<script src="./index-syntaxys.js" type="module"></script>
-		<script src="./index-2-masyv.js" type="module"></script>
-		<script src="./index-3-function.js" type="module"></script>
-		<script src="./index-4-dom.js" type="module"></script>
-		<script src="./index-5-test.js" type="module"></script>
-		<script src="./index-6-hw6.js" type="module"></script>
-	</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homework 6</title>
+    <link rel="stylesheet" href="css/common.css" />
+  </head>
+  <body>
+    <ul>
+      <li><a href="task-01.html">Task 1</a></li>
+      <li><a href="task-02.html">Task 2</a></li>
+      <li><a href="task-03.html">Task 3</a></li>
+      <li><a href="task-04.html">Task 4</a></li>
+      <li><a href="task-05.html">Task 5</a></li>
+      <li><a href="task-06.html">Task 6</a></li>
+      <li><a href="task-07.html">Task 7</a></li>
+      <li><a href="task-08.html">Task 8</a></li>
+      <li><a href="task-09.html">Task 9</a></li>
+      <li><a href="task-10.html">Task 10 (optional)</a></li>
+    </ul>
+  </body>
 </html>
